Added link to prerequisites.

--- a/Handout/troubleshooting.tex
+++ b/Handout/troubleshooting.tex
@@ -4,6 +4,11 @@ nodes in general. Please see the FAQ first. If your problem is not listed or the
 feel free to leave us a message at the means of support that you see most fit.
 
 \subsection{FAQ}
+
+\subsubsection{General}
+Q: Can I add my own modifications to the Unimod.xml?
+A: No!
+
 \subsubsection{Platform-specific problems}
 \paragraph{Linux}
 Q: Stdlib problem on Linux
