--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -3,7 +3,8 @@
 % file names are changed quite often between tutorial so make them configurable at the top		
 \newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ Full\ 3.1.1\ Installer\ (64bit).exe}		
 \newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.0\_Win64\_setup.exe}		
-\newcommand{\WindowsOpenMSPrereqInstallerName}{Windows / OpenMS-2.0-prerequisites-installer.exe}		
+\newcommand{\WindowsOpenMSPrereqInstallerName}{Windows / OpenMS-2.0-prerequisites-installer.exe}	
+\newcommand{\WindowsPrerequisitesLink}{http://sourceforge.net/projects/open-ms/files/OpenMS/OpenMS-1.10/OpenMS-1.10-win32-prerequisites-installer.exe/download}
 \newcommand{\MacKnimeInstallerName}{Mac / knime-full\_3.1.1.macosx.cocoa.x86\_64.dmg}		
 \newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.0.0\_setup.dmg}		
 \newcommand{\KnimeUpdateSite}{http://update.knime.org/analytics-platform/3.1}		
@@ -32,7 +33,7 @@ and follow the instructions. If you are working through this tutorial at home or
 \begin{itemize}
 \item OpenMS: www.openms.de/downloads
 \item KNIME: https://www.knime.org/downloads/overview
-\item OpenMS prerequisites (Windows-only): After installation, before your first use of the OpenMS plugin in KNIME you will be asked to download it automatically.
+\item OpenMS prerequisites (Windows-only): After installation, before your first use of the OpenMS plugin in KNIME you will be asked to download it automatically if certain requirements are not found in your Windows registry. Alternatively, you can get a bundled version \hyperref{\WindowsPrerequisitesLink}{here}.
 \end{itemize}
 Choose the installers for the platform you are working on. We suggest to use the full installers so that you can skip the installation of the OpenMS plugin and other dependencies for the example workflows.
 
